day 2 exercise updated

--- a/Week_2/Day_1/flexbox/index.html
+++ b/Week_2/Day_1/flexbox/index.html
@@ -19,7 +19,7 @@
 
 	<div class="container-test">
 		<div class="card-test">logo</div>
-		<div class="card-test" style="width: 20%; height: 40%; align-self: flex-end;">team</div>
+		<div class="card-test">team</div>
 		<div class="card-test">product</div>
 		
 	</div>
