--- a/Week_4/day_5/ExcerciseXp/exerciseXp1/index.html
+++ b/Week_4/day_5/ExcerciseXp/exerciseXp1/index.html
@@ -7,11 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-  <div>Users:</div>
-  <ul>
+  <div id="container">Users:</div>
+  <ul class="list">
     <li>John</li>
     <li>Pete</li>
   </ul>
+  <ul class="list">
+    <li>David</li>
+    <li>Sarah</li>
+    <li>Dan</li>
+</ul>
   <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
